--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
 <h1>MFE2 runs with Angular 18!</h1>
+<div>
+  <ul>
+    <li><a routerLink="/mfe2/flights">Your Flights</a></li>
+    <li><a routerLink="/mfe2/profile">Your Profile</a></li>
+  </ul>
+</div>
+<div>
+  <router-outlet/>
+</div>
